# libvirt-rust

./: .travis.yml  Cargo.toml  LICENSE  README.md
examples/: hellolibvirt.rs
libvirt-sys/: Cargo.toml  lib.rs
src/: connection.rs  domain.rs  error.rs  interface.rs  lib.rs  network.rs  node.rs  storage.rs
src/domain/: mod.rs  structs.rs
tests/: integration_tests.rs
